--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,10 @@
 SERVER_PORT=5000
 
-DB_HOST=localhost
-DB_PORT=
-DB_USER=
-DB_PASS=
-DB_NAME=
+DB_HOST=51.15.185.110
+DB_PORT=3306
+DB_USER=Administrateur
+DB_PASS==jeK#p!+LFsFjJ2U
+DB_NAME=folomi
 
 JWT_PRIVATE_KEY=Arspdps-d579f8s44df8uazepoisdfç9dfispdo123JZps+9d8f7sdfaaZFDFZ
 JWT_EXPIRES_IN=3600
