--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 SERVER_PORT=5000
 
-DB_HOST=localhost
+DB_HOST=51.15.185.110
 DB_PORT=3306
-DB_USER=root
-DB_PASS=root
-DB_NAME=authentification
+DB_USER=Administrateur
+DB_PASS==jeK#p!+LFsFjJ2U
+DB_NAME=folomi
 
 JWT_PRIVATE_KEY=Arspdps-d579f8s44df8uazepoisdfç9dfispdo123JZps+9d8f7sdfaaZFDFZ
 JWT_EXPIRES_IN=3600
