--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "nodemon ./build/app.ts",
+    "start:olddev": "rimraf ./build && tsc && node build/app.js",
+    "start": "tsc && node build/app.js",
+    "build": "rimraf ./build && tsc",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prettier-format": "prettier --config .prettierrc.js '{src/**/*.{js,ts,tsx},tests/**/*.{js,ts,tsx}}' --write",
+    "lint": "eslint '{src/**/*.{js,ts,tsx},tests/**/*.{js,ts,tsx}}' --quiet && prettier src --check",
+    "fix-code": "eslint '{src/**/*.{js,ts,tsx},tests/**/*.{js,ts,tsx}}' --quiet --fix && prettier src --write"
   },
   "keywords": [],
   "author": "",
@@ -14,18 +20,29 @@
     "argon2": "^0.27.1",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
+    "eslint-config-airbnb": "^18.2.1",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.2.5",
-    "nodemon": "^2.0.7"
+    "md5": "^2.3.0",
+    "mysql2": "^2.2.5"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/md5": "^2.3.0",
+    "@types/node": "^14.14.31",
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.14.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.3"
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-prettier": "^3.3.1",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
+    "rimraf": "^2.7.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5"
   }
 }
