start folomi api

--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ DB_PASS==jeK#p!+LFsFjJ2U
 DB_NAME=folomi
 
 JWT_PRIVATE_KEY=Arspdps-d579f8s44df8uazepoisdfç9dfispdo123JZps+9d8f7sdfaaZFDFZ
-JWT_EXPIRES_IN=3600
+JWT_EXPIRES_IN=86400000
