--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start:dev": "nodemon ./build/app.ts",
     "start:olddev": "rimraf ./build && tsc && node build/app.js",
     "start": "tsc && node build/app.js",
+    "test": "jest",
     "build": "rimraf ./build && tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "prettier-format": "prettier --config .prettierrc.js '{src/**/*.{js,ts,tsx},tests/**/*.{js,ts,tsx}}' --write",
     "lint": "eslint '{src/**/*.{js,ts,tsx},tests/**/*.{js,ts,tsx}}' --quiet && prettier src --check",
     "fix-code": "eslint '{src/**/*.{js,ts,tsx},tests/**/*.{js,ts,tsx}}' --quiet --fix && prettier src --write"
@@ -25,11 +25,14 @@
     "express-async-handler": "^1.1.4",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
+    "knex": "^0.21.18",
     "md5": "^2.3.0",
+    "moment": "^2.29.1",
     "mysql2": "^2.2.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.20",
     "@types/md5": "^2.3.0",
     "@types/node": "^14.14.31",
     "babel-eslint": "^10.1.0",
@@ -39,9 +42,11 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-prettier": "^3.3.1",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "rimraf": "^2.7.1",
+    "ts-jest": "^26.5.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
   }
