--- a/.env
+++ b/.env
@@ -6,5 +6,12 @@ DB_USER=Administrateur
 DB_PASS==jeK#p!+LFsFjJ2U
 DB_NAME=folomi
 
+DB_HOST_22=test.dag-system.com
+DB_PORT_22=3306
+DB_USER_22=Administrateur
+DB_PASS_22=aqwzsxed
+DB_NAME_22=c22_a000
+
+
 JWT_PRIVATE_KEY=Arspdps-d579f8s44df8uazepoisdfç9dfispdo123JZps+9d8f7sdfaaZFDFZ
 JWT_EXPIRES_IN=86400000
