--- a/.env.prod
+++ b/.env.prod
@@ -1,11 +1,10 @@
 SERVER_PORT=5000
 
-DB_HOST=test.dag-system.com
+DB_HOST=51.15.185.110
 DB_PORT=3306
 DB_USER=Administrateur
-DB_PASS=aqwzsxed
+DB_PASS==jeK#p!+LFsFjJ2U
 DB_NAME=folomi
-
 
 DB_HOST_22=test.dag-system.com
 DB_PORT_22=3306
@@ -13,5 +12,6 @@ DB_USER_22=Administrateur
 DB_PASS_22=aqwzsxed
 DB_NAME_22=c22_a000
 
+
 JWT_PRIVATE_KEY=Arspdps-d579f8s44df8uazepoisdfç9dfispdo123JZps+9d8f7sdfaaZFDFZ
-JWT_EXPIRES_IN=3600
+JWT_EXPIRES_IN=86400000
