--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
+NODE_ENV=prod/dev
 SERVER_PORT=5000
 
 DB_HOST=test.dag-system.com
@@ -5,7 +6,6 @@ DB_PORT=3306
 DB_USER=Administrateur
 DB_PASS=aqwzsxed
 DB_NAME=folomi
-
 
 DB_HOST_22=test.dag-system.com
 DB_PORT_22=3306
@@ -15,3 +15,6 @@ DB_NAME_22=c22_a000
 
 JWT_PRIVATE_KEY=Arspdps-d579f8s44df8uazepoisdfç9dfispdo123JZps+9d8f7sdfaaZFDFZ
 JWT_EXPIRES_IN=3600
+
+LOG_TCP_HOST=localhost
+LOG_TCP_PORT=23
