--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "authenfication",
+  "name": "conciergerie",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -19,6 +19,7 @@
   "dependencies": {
     "argon2": "^0.27.1",
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -32,6 +33,8 @@
     "mysql2": "^2.2.5",
     "swagger-jsdoc": "^7.0.0-rc.4",
     "swagger-ui-express": "^4.1.6",
+    "winston": "^3.3.3",
+    "winston-syslog": "^2.4.4",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
